--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
+		"nodedev": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"repository": {
 		"type": "git",
