--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "image-format-converter-back",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"dependencies": {
-		"express": "^4.17.1",
-		"gm": "^1.23.1",
-		"multer": "^1.4.2",
-		"spawn-sync": "^2.0.0"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.7"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"nodedev": "nodemon server.js",
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/hegworks/image-format-converter-back.git"
-	},
-	"author": "hegworks",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/hegworks/image-format-converter-back/issues"
-	},
-	"homepage": "https://github.com/hegworks/image-format-converter-back#readme"
+  "name": "image-format-converter-back",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "gm": "^1.23.1",
+    "multer": "^1.4.2",
+    "spawn-sync": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "deploy": "mkdir uploads && node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hegworks/image-format-converter-back.git"
+  },
+  "author": "hegworks",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hegworks/image-format-converter-back/issues"
+  },
+  "homepage": "https://github.com/hegworks/image-format-converter-back#readme"
 }
