--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "image-format-converter-back",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "mkdirp uploads && nodemon server.js",
     "deploy": "mkdir uploads && node server.js"
   },
   "repository": {
